<?xml version="1.0"?>
<package format="2">
  <name>nmpc_blimp_formation_planner_msgs</name>
  <version>0.1.1</version>
  <description>nmpc optimizing for blimp formation</description>
  <maintainer email="maintainer-email@todo.todo">chung</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <export></export>
</package>