<?xml version="1.0"?>
<package format="3">
  <name>nmpc_blimp_formation_planner_msgs</name>
  <version>0.1.1</version>
  <description>nmpc optimizing for blimp formation</description>
  <maintainer email="maintainer-email@todo.todo">chung</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Messages -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>